--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -248,6 +248,8 @@ $hero-caption-padding-x: 0.48rem;
 $hero-caption-reveal-delay: 0.5s;
 $hero-caption-reveal-duration: 0.42s;
 $hero-caption-reveal-offset-y: 0.28rem;
+$new-release-card-hover-lift: 0.375rem;
+$new-release-slider-track-clearance-y: 1.45rem;
 
 $search-panel-page-padding: 1rem;
 $search-panel-page-padding-mobile: 0.75rem;
